# doc-gen

./: .gitignore  README.rst  doc.py  docstrings.json  mytest.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  quickstart.rst  reference.rst
