[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "doc"
author = "Pradhyum R"
author-email = "drpradhyum2016@outlook.com"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires = [
	"Pygments",
	"prompt-toolkit",
]
description-file = "README.rst"
dist-name = "doc-gen"

[tool.flit.scripts]
doc = "doc:main"
